# claude-switch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude_switch/: __init__.py  binary.py  cli.py  config.py  keystore.py  launcher.py  shim.py  state.py  ui.py  usage.py
