[project]
name = "claude-switch"
version = "0.2.0"
description = "Multi-account Claude Code launcher"
keywords = ["claude", "anthropic", "claude-code", "multi-account"]
authors = [{ name = "Nate Shoffner", email = "nate.shoffner@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic (>=2.13.4,<3.0.0)", "questionary (>=2.0.0)"]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/nateshoffner/claude-switch", Repository = "https://github.com/nateshoffner/claude-switch" }

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]

[project.scripts]
claude-switch = "claude_switch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_switch"]
